osprey_worker/src/osprey/engine/ast_validator/validators/tests/test_validate_dynamic_calls_have_annotated_rvalue/test_invalid_annotation[list].txt
error: can only check dynamic return values of simple types or `Entity`, `ExtractLiteral`, `ExtractSecret`, `List`, `Optional`, `Secret`, `Union` generics
--> main.sml:1:5
     |
   1 | Foo: list = JsonData(path='$.foo')
     |      ^ got unknown non-generic type `list`